zishao-410-duplicate-name-fix-0511

--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/3.use-string-connector-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/3.use-string-connector-in-query-of-oracle-mode.md
@@ -20,7 +20,7 @@ In an Oracle tenant, `||` is used as a string concatenation operator.
 2. Insert data into the `tif_ny` table. 
 
    ```unknow
-   obclient> INSERT INTO tif_ny VALUES(401,'张','三',date'1970-8-11'),
+   obclient> INSERT INTO tif_ny VALUES(401,'Zhang','San',date'1970-8-11'),
              (402,'Li','Si',date'1971-5-11'),(403,'Wang','Wu',date'1972-7-11');
    Query OK, 3 rows affected
    Records: 3  Duplicates: 0  Warnings: 0
