--- a/en-US/7.reference/7.command-line-tools/8.ob-admin/5.dumpsst.md
+++ b/en-US/7.reference/7.command-line-tools/8.ob-admin/5.dumpsst.md
@@ -13,7 +13,7 @@ succ to open, filename=ob_admin_rs.log, fd=4, wf_fd=2
 
 Usage: dumpsst command [command args] [options]
 commands:
-        -d,--dump                     dump, arg：[macro_block]
+        -d,--dump                     dump, arg:[macro_block]
         -h,--help                     display this message.
 options:
         -f,--data-file-name           data file path or the ofs address
