--- a/en-US/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -1,10 +1,15 @@
 # OceanBase Database Community Edition V4.1.0
 
+## V4.1.0 Beta
+
+### Version information
+
+* Release date: March 20, 2023
+* Version: V4.1.0
+
+### Overview
+
 OceanBase Database Community Edition V4.1 leverages the upgraded architecture of V4.0 and is specifically tailored towards public cloud and open source scenarios. In addition to its rich variety of features, this version is further optimized to achieve improved compatibility with MySQL 8.0, as well as enhanced performance and ease of use at a lower cost. This version is also designed to support large-scale replication, and therefore can be comprehensively commercialized.
-
-
-
-## Overview
 
 This version comes with a range of powerful updates designed to significantly enhance its core capabilities, including:
 
@@ -54,9 +59,9 @@ This version comes with a range of powerful updates designed to significantly en
 
    A standalone edition is released.
 
-## Features
+### Features
 
-### Enhancements
+#### Enhancements
 
 * SQL statement-level resource isolation is supported.
 
@@ -76,7 +81,7 @@ This version comes with a range of powerful updates designed to significantly en
 
    As the number of OceanBase Database users continues to grow, we have noticed an increase in demand for the use of the Latin1 character set. By adding support for this character set in OceanBase Database V4.1, we are simplifying project migration that would otherwise require complex character set conversions. In MySQL mode, we support both `latin1_bin` and `latin1_swedish_ci` collations, while in Oracle mode, only `latin1_bin` is supported.
 
-### Compatibility with MySQL
+#### Compatibility with MySQL
 
 * Compatibility with MySQL 8.0 in system functions, variables, and SQL modes is improved.
 
@@ -104,7 +109,7 @@ This version comes with a range of powerful updates designed to significantly en
 
    <!-- For more information, see [Spatial data types](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md). -->
 
-### Improved performance
+#### Improved performance
 
 * The data import performance is improved.
 
@@ -128,13 +133,13 @@ This version comes with a range of powerful updates designed to significantly en
    * The execution of Index Skip Scan is optimized. When the NDV operator is used to calculate more than 0.5 million rows of data, the performance can be improved by about 10 times.
    * The parallel execution of the TRUNCATE TABLE statement is optimized, improving the statement execution efficiency by about 10 times.
 
-### Enhanced stability
+#### Enhanced stability
 
 * The upper limit on the storage size of LOBs is increased by using `DBMS_LOB`.
 
    In earlier versions of OceanBase Database, the size of a stored LOB is limited to 48 MB. This poses a forcible restriction on the use of LOBs. Through the architectural upgrade in OceanBase Database V4.1, the storage layer splits an LOB macroblock into multiple LOB metadata records for storage. When the LOB macroblock needs to be fetched, these metadata records are aggregated into a continuous buffer, which is then returned to the SQL layer for processing. This breaks the limit on the data storage size and extends the LOB size to 512 MB by using regular SQL statements. In Oracle mode, the LOB size can be extended to the TB level by using the `DBMS_LOB` package.
 
-### Enhanced high availability
+#### Enhanced high availability
 
 * Primary and standby tenants based on archived logs are supported.
 
@@ -151,7 +156,7 @@ This version comes with a range of powerful updates designed to significantly en
    * If the primary OBServer node crashes due to a fault, the standby OBServer node works with ODP to recover services.
    * If the log disk or data disk of the primary OBServer node becomes faulty, the primary node returns an error but does not go offline. The replicas on this node are migrated to a functioning node and a new leader is elected to provide services. In this case, the number of available replicas decreases and the faulty node needs to be manually recovered.
 
-### Enhanced O&M capabilities
+#### Enhanced O&M capabilities
 
 * Online upgrades of V4.0 series are supported.
 
@@ -221,7 +226,7 @@ This version comes with a range of powerful updates designed to significantly en
 
    * Table space optimization: If a small table is split into many partitions, storage amplification appears in macroblock storage. This is prone to result in insufficient disk space when a large number of partitions exist. Multiple small SSTables are stored in a physical macroblock for compaction and storage. This achieves a utilization of about 4% and a fragment ratio of about 1.5% for the macroblock when a small table is split into many partitions, significantly improving the disk utilization.
 
-### Product form
+#### Product form
 
 * A standalone edition is released.
 
@@ -229,7 +234,7 @@ This version comes with a range of powerful updates designed to significantly en
 
    <!-- For more information, see [Deploy OceanBase Database on a single OBServer node](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md). -->
 
-## Performance report
+### Performance report
 
 Test environment specifications
 
@@ -250,7 +255,7 @@ Tested versions
 | ODP V4.1 | ODP (OceanBase 4.1.0.0 1)<br>REVISION: 5617-local-e6798c479feaab9f9a60b89f87e4df5e284250b6<br>BUILD_TIME: Mar 11 2023 21:42:11 |
 | OceanBase Database V4.0 | OBServer (OceanBase_CE 4.0.0.0)<br>REVISION: 103000022023011215-05bbad0279302d7274e1b5ab79323a2c915c1981<br>BUILD_TIME: Jan 12 2023 15:28:27 |
 | ODP V4.0 | ODP (OceanBase 4.0.0 5)<br>REVISION: 1-local-9d5c90e562c61d9fcf8894993187aa20239db47e<br>BUILD_TIME: Oct 28 2022 23:01:19 |
-### Sysbench OLTP benchmark
+#### Sysbench OLTP benchmark
 
 **Test plan:**
 
@@ -311,7 +316,7 @@ Tested versions
 | 512 | 383006.31 | 33.12 | 479109.44 | 25.74 |
 | 1024 | 389587.53 | 104.84 | 561333.10 | 48.34 |
 
-### TPC-C benchmark test with BenchmarkSQL
+#### TPC-C benchmark test with BenchmarkSQL
 
 **Test plan:**
 
@@ -348,7 +353,7 @@ BenchmarkSQL V5.0
 | tpmC (NewOrders) | 307,021.0 | 332559.26 |
 | tpmTOTAL | 682,517.67 | 738374.78 |
 
-### TPC-H benchmark test
+#### TPC-H benchmark test
 
 **Test plan:**
 
@@ -389,7 +394,7 @@ BenchmarkSQL V5.0
 | Q22 | 1.24 | 1.09 |
 | Total | 28.16 | 23.21 |
 
-### TPC-DS benchmark test
+#### TPC-DS benchmark test
 
 **Test plan:**
 
@@ -507,9 +512,9 @@ BenchmarkSQL V5.0
 | Q99 | 0.70 |
 | Total time | 160.83 |
 
-## Compatibility changes
+### Compatibility changes
 
-### Product behavioral changes
+#### Product behavioral changes
 
 | Feature | Version | Change description |
 |---|---|---|
@@ -518,7 +523,7 @@ BenchmarkSQL V5.0
 | UNUSABLE index | V4.1 | UNUSABLE indexes that are generated after partitions are deleted cannot be restored from the backup.  |
 | MAJOR FREEZE | V4.1 | You can initiate a major compaction task for a specific tenant, tablet, or table.  |
 
-### Views, entity tables, and virtual tables
+#### Views, entity tables, and virtual tables
 
 | Views, entity tables, and virtual tables | Usage and incompatibility | New/Change | Version |
 |---|---|---|---|
@@ -548,7 +553,7 @@ BenchmarkSQL V5.0
 
 <!-- For more information, see [System views](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/1.overview-of-mysql-mode.md). -->
 
-### Parameter changes
+#### Parameter changes
 
 | Parameter | Usage and incompatibility | Status change | Version |
 |---|---|---|---|
@@ -577,13 +582,13 @@ BenchmarkSQL V5.0
 | `_ob_plan_cache_auto_flush_interval` | The interval for periodically flushing the plan cache.  | Default value: 0s, which specifies not to automatically flush the plan cache.  | V4.1 |
 | `enable_user_defined_rewrite_rules` | Specifies whether to enable user-defined rules.  | Default value: False.  | V4.1 |
 
-## Note
+### Note
 
 * An online upgrade from OceanBase Database V3.x to OceanBase Database V4.x is not supported.
 * You can use OMS to migrate the data logic of OceanBase Database V3.x to OceanBase Database V4.1.
 * An online upgrade from OceanBase Database V4.0 to OceanBase Database V4.1 is supported.
 
-## Supported components
+### Supported components
 
 The following table describes the recommended component versions for OceanBase Database V4.1.0.
 
@@ -598,7 +603,7 @@ The following table describes the recommended component versions for OceanBase D
 | ob-operator | V1.2.0 |
 | MySQL JDBC driver | V5.1.47 |
 
-## Limits
+### Limitation
 
 * In OceanBase Database V4.1.0, load balancing is not supported after replica scale-out. Therefore, data that already exists before the scale-out cannot be distributed to the newly added nodes. This issue will be resolved in V4.2.
 * OceanBase Database V4.1.0 does not support replicated tables. This issue will be resolved in V4.2.
@@ -608,6 +613,54 @@ The following table describes the recommended component versions for OceanBase D
 * In OceanBase Database V4.1.0, you can only increase the number of resource units (`UNIT_NUM`) of a tenant. You will be allowed to decrease the number of resource units in later versions.
 * In OceanBase Database V4.1.0, if you execute the `DROP DATABASE` statement to drop more than 200 tables from a database at a time, the operation may fail. We recommend that you first execute `DROP TABLE` and then `DROP DATABASE`. This issue will be resolved in V4.2.
 
+## V4.1.0
 
+### Version information
+
+* Release date: April 20, 2023
+* Version: V4.1.0
+
+### Overview
+
+This version fixes some bugs and improves stability. 
+
+### Bug fixes
+
+* Fixed a backup failure issue which occurred when many empty tablets exist.
+* Fixed a bug where stack overflow would occur when the operating system page size is set to 64 KB.
+* Fixed a bug of failing to read the lob data length after the upgrade from version 4.0 to version 4.1.
+* Fixed a bug of memory leak caused by the ModulePageAlloc module.
+* Fixed a disconnection issue caused by the lack of updating session active time in the response logic of COM_PING.
+* Fixed the bug where the `OUTPUT_BYTES` statistics in the `CDB_OB_BACKUP_SET_FILES` view was not accurate.
+
+### Note
+
+* OBD V2.0.0 does not support the upgrade of OceanBase Database from V4.0.0 to V4.1.0.
+* OCP V4.0.3_CE now supports the upgrade of OceanBase Database from V4.0.0 to V4.1.0.
+
+## V4.1.0 BP1
+
+### Version information
+
+* Release date: May 12, 2023
+* Version: V4.1.0 BP1
+
+### Overview
+
+This version fixes some bugs and improves stability. 
+
+### Bug fixes
+
+* Fixed an issue where the error code of the REGEXP BINARY expression was incompatible with that of MySQL.
+* Fixed a bug where the SQL execution result sets were duplicated after IN expression optimization.
+* Fixed a bug where OceanBase Database deployed in a Kubernetes cluster failed to start due to too many virtual network cards.
+* Fixed a bug where the execution plan was not generated as expected after an index was created on a generated column and used for table access.
+* Fixed an issue that OceanBase Database does not support the NULLABLE field in the `information_schema.STATISTICS` view. 
+* Fixed a bug where plan cache eviction would fail if an SQL execution plan occupies too much memory and contains expressions that cannot be parameterized.
+* Fixed a bug related to encoding data estimation error, which resulted in the writing of more than 2 MB of encoded data into the macroblock memory buffer. This bug would result in macroblock serialization failure, which in turn caused the major compaction to be stuck.
+
+### Note
+
+OBD V2.1.0 and later support the upgrade of OceanBase Database from V4.0.0 to V4.1.0. 
 
 
