--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -624,7 +624,7 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 
 ### 缺陷修复
 
-* 修复存在多个空 Tablet 时出现备份失败问题。
+* 修复空 Tablet 数据较多时出现备份失败问题。
 * 修复操作系统页面大小为 64k 场景下可能触及的爆栈问题。
 * 修复从 V4.0.0 升级到 V4.1.0 后，Lob 数据长度读取失败问题。
 * 修复 500 租户 ModulePageAlloc 模块占用过高导致内存爆问题。
