--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/6.interval-year-to-month-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/6.interval-year-to-month-data-type-of-oracle-mode.md
@@ -16,7 +16,7 @@ INTERVAL YEAR [(precision)] TO MONTH
 
 在插入 `INTERVAL YEAR TO MONTH` 数据类型的值时，所支持的格式如下表所示。
 
-更多关于间隔数据类型值的指定请参见 [间隔字面量](../../3.literal-of-oracle-mode/5.interval-literal-of-oracle-mode.md。
+更多关于间隔数据类型值的指定请参见 [间隔字面量](../../3.literal-of-oracle-mode/5.interval-literal-of-oracle-mode.md)。
 
 |                     **语法**                     |               **示例**               |                            **说明**                            |
 |------------------------------------------------|------------------------------------|--------------------------------------------------------------|
