zishao-v410-borken-link-fix-1

--- a/en-US/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/en-US/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -264,7 +264,7 @@ If Grafana or Prometheus is installed, the access URL of Grafana or Prometheus i
 
 After you deploy an OceanBase cluster, the sys tenant is automatically created in the database. You can create user tenants from the `sys` tenant as needed.
 
-For more information about how to create a user tenant, see [Create a tenant](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md).
+For more information about how to create a user tenant, see [Create a tenant](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md).
 
 ### Connect to OceanBase Database:
 
