--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -14,10 +14,7 @@ You can deploy OceanBase Database Community Edition in the following ways:
 
 ## Standard deployment
 
-* In an offline environment, we recommend that you use OBD for standard deployment. For more information, see [Deploy OceanBase Database in a production environment](2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md).
+* In an offline environment, we recommend that you use OBD for standard deployment.
 
 * In a Kubernetes environment, we recommend that you use ob-operator for deployment. For more information, see [Deploy OceanBase Database in a Kubernetes cluster](../5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md).
 
-## Online experience
-
-To experience the features of OceanBase Database Community Edition without deploying it, visit the [OceanBase experience site](https://play.oceanbase.com/#/odc/connections).
