--- a/en-US/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
+++ b/en-US/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
@@ -6,7 +6,7 @@ This topic describes how to use SQL statements to migrate data between tables.
 
 ### Statement 1
 
-Use the `INSERT INTO... SELECT...` statement to migrate data between tables. For more information, see [INSERT (MySQL Mode)](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) or [INSERT (Oracle Mode)](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md).
+Use the `INSERT INTO... SELECT...` statement to migrate data between tables. For more information, see [INSERT (MySQL Mode)](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) or [INSERT (Oracle Mode)](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md).
 
 ```sql
 INSERT INTO target_table_name[(target_col_name[, target_col_name] ...)]
