--- a/en-US/6.manage/3.replica-management/1.replica-introduction.md
+++ b/en-US/6.manage/3.replica-management/1.replica-introduction.md
@@ -39,7 +39,7 @@ Full-featured replicas are classified into leaders and followers based on data p
 
 Log streams are a collection of data automatically created and managed in OceanBase Database. A log stream includes data partitions, transaction operation logs, and transaction management structures. Redo logs, which run on the Paxos protocol, synchronize logs across replicas for data consistency and high availability. TxCtxMgr is a transaction management structure that allows for atomic commitment of modifications across all data partitions within a log stream. A transaction that spans multiple log streams is atomically committed based on the optimized two-phase commit protocol of OceanBase Database. Log streams are participants in distributed transactions. 
 
-![Log stream](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/easy-of-use/manage/replica-management/replica-fine-granularity/log-stream.png)
+<!-- ![Log stream](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/easy-of-use/manage/replica-management/replica-fine-granularity/log-stream.png) -->
 
 With the introduction of OceanBase Database v4.0, the basic unit for transaction commitment has changed from partitions to log streams.
 
@@ -69,10 +69,10 @@ The location information of a log stream records the OBServer nodes on which the
 
 The role information of a log stream defines whether the log stream is a leader or a follower. You can query the role information of log streams from the `ROLE` field in the `oceanbase.DBA_OB_LS_LOCATIONS` view. Data partitions do not have independent role information. Instead, their roles are determined by the log streams they belong to. The roles of log streams are determined based on the election protocol. 
 
-For more information about the `oceanbase.DBA_OB_LS_LOCATIONS` view, see [oceanbase.DBA_OB_LS_LOCATIONS](../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/44.oceanbase-dba_ob_ls_locations-of-mysql-mode.md).
+For more information about the `oceanbase.DBA_OB_LS_LOCATIONS` view, see [oceanbase.DBA_OB_LS_LOCATIONS](../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/44.oceanbase-dba_ob_ls_locations-of-mysql-mode.md).
 
 ### View the mapping between data partitions and log streams
 
 You can query for the mapping between data partitions and log streams of a tenant from the `DBA_OB_TABLE_LOCATIONS` view. Each replica of a data partition records the basic information of the data partition and the information about the log stream to which the data partition belongs. 
 
-For more information about the `oceanbase.DBA_OB_TABLE_LOCATIONS` view, see [oceanbase.DBA_OB_TABLE_LOCATIONS](../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/178.oceanbase-dba_ob_table_locations-of-mysql-mode.md).
+For more information about the `oceanbase.DBA_OB_TABLE_LOCATIONS` view, see [oceanbase.DBA_OB_TABLE_LOCATIONS](../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/178.oceanbase-dba_ob_table_locations-of-mysql-mode.md).
