--- a/en-US/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
+++ b/en-US/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
@@ -146,4 +146,4 @@ Directories at the backup destination and file types under each directory:
 
 OceanBase Database supports tenant-level recovery, which allows you to create a tenant based on the existing data backup. You can execute the `alter system restore tenant` statement to recover the data. The recovery process consists of the restoration and recovery of the system tables and user tables of the tenant. The restoration process restores the specified baseline data to the OBServer node of the target tenant. The recovery process recovers the logs of the baseline data to the corresponding OBServer node.
 
-For more information about physical backup and recovery, see [Backup and recovery](../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/1.backup-and-recovery-overview.md).
+<!-- For more information about physical backup and recovery, see [Backup and recovery](../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/1.backup-and-recovery-overview.md). -->
