--- a/en-US/2.quickstart/2.get-started-with-oceanbase-sql/2.basic-sql-operations-of-mysql-mode.md
+++ b/en-US/2.quickstart/2.get-started-with-oceanbase-sql/2.basic-sql-operations-of-mysql-mode.md
@@ -306,7 +306,7 @@ Examples:
    4 rows in set
    ```
 
-For more information about the `INSERT` statement, see [INSERT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-of-mysql-mode.md).
+For more information about the `INSERT` statement, see [INSERT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md).
 
 ## Delete data
 
