--- a/en-US/4.deploy/1.deploy-overview.md
+++ b/en-US/4.deploy/1.deploy-overview.md
@@ -36,5 +36,5 @@ This document provides information on how to deploy OceanBase Database editions,
 
 * For more information about the deployment process of OceanBase Database Enterprise Edition, see [Deployment process](3.deploy-oceanbase-database-enterprise/1.deployment-process.md).
 * For more information about OAT deployment, see [Deploy OAT](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md).
-* For more information about OCP deployment, see [Deploy OCP](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp.md).
-* For more information about ODC deployment, see [Deploy ODC](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc.md).
+* For more information about OCP deployment, see [Deploy OCP](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp-graphical.md).
+* For more information about ODC deployment, see [Deploy ODC](3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc-graphical.md).
