--- a/en-US/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/en-US/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -15,7 +15,7 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     DESTINATION [=] ip_port;
 ```
 
-For more information about the syntax for resource unit migration, see [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.UNIT.md).
+For more information about the syntax for resource unit migration, see [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md).
 
 Parameters:
 
