zishao-v410-absolute-path-fix-1

--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/3.restart-a-node.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/3.restart-a-node.md
@@ -4,7 +4,7 @@ Restart is a general O&M action. You can perform a restart for provisional maint
 
 <main id="notice" type='explain'>
 <h4>Note</h4>
-<p>The cluster-level parameter <code>server_permanent_offline_time</code> specifies the maximum heartbeat interruption period for a node to be considered permanently offline. The replica on a permanently offline node is automatically replaced. The default value is 3600s. For more information about this parameter, see <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md">server_permanent_offline_time</a>. </p>
+<p>The cluster-level parameter <code>server_permanent_offline_time</code> specifies the maximum heartbeat interruption period for a node to be considered permanently offline. The replica on a permanently offline node is automatically replaced. The default value is 3600s. For more information about this parameter, see <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/190.server_permanent_offline_time.md">server_permanent_offline_time</a>. </p>
 </main>
 
 ## Background
@@ -75,7 +75,7 @@ This topic describes how to restart a single node in a cluster. To restart multi
 
    After you initiate a minor compaction, you must wait for the minor compaction to complete before you proceed to the next step. For more information about how to view the minor compaction progress, see [View minor compaction information](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md).
 
-   For more information about minor compactions, see [Minor compaction](../../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/2.dump.md).
+   <!-- For more information about minor compactions, see [Minor compaction](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md). -->
 
 4. Stop the observer process.
 
@@ -87,7 +87,7 @@ This topic describes how to restart a single node in a cluster. To restart multi
       [admin@xxx /]$ cd /home/admin/oceanbase/bin
       ```
 
-      For more information about the installation directory of OceanBase Database, see [Structure of the OBServer installation directory](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md).
+      <!-- For more information about the installation directory of OceanBase Database, see [Structure of the OBServer installation directory](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md). -->
 
    3. Run the following command to obtain the process ID of the node.
 
