--- a/zh-CN/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
+++ b/zh-CN/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
@@ -16,7 +16,7 @@ OceanBase 数据库支持旁路导入的方式向数据库插入数据，即 Oce
 
 目前 OceanBase 数据库支持以下语句进行旁路导入：
 
-* `LOAD /*+ direct */ DATA`
+* `LOAD DATA /*+ direct */`
 
 * `INSERT /*+ append */ INTO SELECT`
 
