410服务器配置说明格式修改

--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -119,7 +119,7 @@
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>建议根目录不小于 50 GB，不建议单独挂载 /opt 和 /var 目录。如果使用 LVM，建议创建时使用条带化参数。示例如下：</p>
-    <p><code></code><code>shell lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128 &lt;code&gt;&lt;/code&gt;</code></p>
+    <p><code>lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128</code></p>
   </main>
 
 ## 网卡设置
