410错别字修改

--- a/zh-CN/5.data-migration/1.data-migration-overview.md
+++ b/zh-CN/5.data-migration/1.data-migration-overview.md
@@ -40,4 +40,4 @@ OceanBase 数据库提供丰富的数据迁移复制方法，包括：
 |MyDumper| 支持 |支持| 不支持| 不支持 |MySQL 兼容的数据源|
 |DataX|不支持|支持|不支持|不支持|较多，具体范围查看官方文档|
 |OUTFILE 语句| 不支持 |支持 |不支持 |不支持 |MySQL</br>OceanBase|
-|DBCAT|支持|bu支持|不支持|不支持|较多，具体范围查看官方文档|
+|DBCAT|支持|不支持|不支持|不支持|较多，具体范围查看官方文档|
